--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "solve:day_1": "node day_1/index.js",
     "solve:day_2": "node day_2/index.js",
+    "solve:day_3": "node day_3/index.js",
     "solve:all": "node solve-all-puzzles.js"
   },
   "keywords": [],
