--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "solve:day_2": "node day_2/index.js",
     "solve:day_3": "node day_3/index.js",
     "solve:day_4": "node day_4/index.js",
+    "solve:day_5": "node day_5/index.js",
     "solve:all": "node solve-all-puzzles.js"
   },
   "keywords": [],
